--- a/src/public/index.html
+++ b/src/public/index.html
@@ -11,5 +11,13 @@
 </body>
 
 <!-- Add js -->
-<script src="test.js"></script>
+<script src="first.js"></script>
+<script src="teamData.js"></script>
+<script src="player.js"></script>
+<script src="roster.js"></script>
+<script src="schedule.js"></script>
+<script src="main.js"></script>
+
+
+<!-- <script src="test.js"></script> -->
 </html>
