--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,13 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
+
+    <!-- CSS -->
+    <style>
+        /* Style the table with equal padding and add borders */
+        table {
+            border: 1px solid black;
+            width: 100%;
+            text-align: left;
+        }
+
+        th, td {
+            padding: 5px 10px;
+            border: 0.5px solid black;
+        }
+
+
+
+    </style>
 </head>
 <body>
-    test
+    <div id="schedule"></div>
+    <div id="stats"></div>
 </body>
 
 <!-- Add js -->
+<script src="secrets.js"></script>
 <script src="first.js"></script>
+<script src="test.js"></script>
 <script src="teamData.js"></script>
 <script src="player.js"></script>
 <script src="roster.js"></script>
