--- a/src/public/index.html
+++ b/src/public/index.html
@@ -30,6 +30,8 @@
 </body>
 
 <!-- Add js -->
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script src="xml2json.js"></script>
 <script src="secrets.js"></script>
 <script src="first.js"></script>
 <script src="test.js"></script>
