--- a/src/public/index.html
+++ b/src/public/index.html
@@ -32,14 +32,31 @@
 <!-- Add js -->
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script src="xml2json.js"></script>
+
+<script src="CONSTANTS.js"></script>
+
 <script src="secrets.js"></script>
+<script src="verification.js"></script>
+
+<script src="ajax.js"></script>
+
+<script src="roster.js"></script>
+<script src="schedule.js"></script>
+<script src="stats.js"></script>
+<script src="league.js"></script>
+
+<script src="ui.js"></script>
+
+<script src="main.js"></script>
+
+<!-- <script src="secrets.js"></script>
 <script src="first.js"></script>
 <script src="test.js"></script>
 <script src="teamData.js"></script>
 <script src="player.js"></script>
 <script src="roster.js"></script>
 <script src="schedule.js"></script>
-<script src="main.js"></script>
+<script src="main.js"></script> -->
 
 
 <!-- <script src="test.js"></script> -->
